--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -65,6 +65,12 @@ knitr::include_graphics("docs/images/correlation.jpeg")
 
 <p align="center"> $R^2 = r_{xy}^2 = \frac{\text{cov(x, y)}}{sd_x sd_y} = \frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{(n-1)sd_x sd_y}$</p>
 
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/correlation2.png")
+```
+Из статьи в википедии про [корреляцию](https://en.wikipedia.org/wiki/Correlation)</p>
+
 https://rpsychologist.com/correlation/
 
 http://guessthecorrelation.com/
@@ -99,11 +105,11 @@ http://guessthecorrelation.com/
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
 knitr::include_graphics("docs/images/Correlation_examples2.svg.png")
 ```
-</p>
+Картинка из [википедии про корреляцию](https://en.wikipedia.org/wiki/Correlation) </p>
 
 ### Непараметрические аналоги
 
-Если ЗП сильно отличается от нормального распределения, или выборка мала, или ЗП закодирована в порядковой шкале -- в коррялционном тесте используется коэффициент корреляции Спирмена вместо Пирсена, и это единственное различие.
+Если ЗП сильно отличается от нормального распределения, или выборка мала, или ЗП закодирована в порядковой шкале -- в корреляционном тесте используется коэффициент корреляции Спирмена вместо Пирсона, и это единственное различие.
 
 Есть еще тау-Кендалла, это почти то же самое, что и корреляция Спирмена, но мы не будем ее рассматривать, так как она применяется крайне редко.
 
@@ -129,12 +135,14 @@ kable(students[1:10,]) %>% scroll_box(width = "100%")
 
 Так как ЗП и НП порядковые, мне нужно использовать непараметрический аналог корреляциии Пирсона -- ранговую корреляцию Спирмена (либо порядковую логистическую регрессию (если я хочу, чтобы связь имела предсказательную силу), но об этом не в этот раз).
 
-```{r, eval=TRUE}
+```{r, eval=TRUE,  message = FALSE, warning= FALSE}
 cor.test(students$famrel, students$Walc, method = 'spearman')
 ```
-Первый вариант визуализации -- мозаичный плот: размер плитки отражает частоту совпадения таких значений двух переменных. Указываем  НП как x=product(НП), и ЗП как fill = ЗП.
+Если бы у нас были две количественные переменные, то мы бы просто визуализировали их диаграммой рассеяния с уже привычной линией посреди точек. Но у нас две порядковые переменные, поэтому диаграмма рассеяния даст непонятный вариант.
 
-```{r, eval=TRUE}
+Поэтому будем использовать мозаичный плот: размер плитки отражает частоту совпадения таких значений двух переменных.
+
+```{r corr mosaic, eval=TRUE, echo = FALSE, message = FALSE, warning= FALSE}
 library(ggmosaic)
 students %>% 
   ggplot(aes()) + 
@@ -143,8 +151,8 @@ students %>%
   theme_minimal() 
 ```
 
-Другой вариант -- хитмеп, как в коррелограмме, где размеры фиксированные, а за частоту совпадений отвечает цвет.
-```{r, eval=TRUE}
+Другой вариант -- хитмеп, тут размеры фиксированные, а за частоту совпадений отвечает цвет.
+```{r corr heatmap, eval=TRUE, echo = FALSE, message = FALSE, warning= FALSE}
 students %>% 
   ggplot(aes(x = as.factor(famrel), y = as.factor(Walc))) + 
   geom_bin2d() +
@@ -155,13 +163,17 @@ students %>%
 ```
 ### Интерпретация результатов
 
-Важно, что при очень большой выборке даже совсем слабая корреляционная связь будет достигать статистической значимости
+Важно, что при очень большой выборке даже совсем слабая корреляционная связь будет достигать статистической значимости!
+
+Еще один важный момент -- в корреляционном тесте, даже при правильно простроенном эксперименте, мы не сможем заключить причинно-следственную связь. Возможна ситуация
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
 knitr::include_graphics("docs/images/corr_causation.png")
 ```
 </p>
+
+https://tylervigen.com/view_correlation?id=12692
 
 ### Корреляционные матрицы
 
@@ -178,6 +190,8 @@ knitr::include_graphics("docs/images/corr_causation.png")
 * Для проверки гипотез о наличии линейной связи между количественными или порядковыми переменными
 * Для предсказания значений ЗП за пределами имеющихся данных 
 
+
+
 ### Коэффициенты регрессии
 
 Уравнение регрессионной прямой:
@@ -185,19 +199,11 @@ knitr::include_graphics("docs/images/corr_causation.png")
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
-knitr::include_graphics("docs/images/anova_SS.jpg")
+knitr::include_graphics("docs/images/anova_to_regression.png")
 ```
 </p>
 
-<p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
-knitr::include_graphics("docs/images/lm_errors.jpeg")
-```
-</p>
-
-
-
-Естьнесколько формул для вычисления коэффициентов линейной регрессии, но все они взаимовычисляемы. Вручную считать мы их не будем, поэтому что важно запомнить:
+Есть несколько формул для вычисления коэффициентов линейной регрессии, но все они взаимовычисляемы. Вручную считать мы их не будем, поэтому что важно запомнить:
 
 * Коэффициент $b_1$ отвечает на наклон прямой **(slope)**
 * Коэффициент $b_0$ отвечает за смещение прямой вдоль оси y **(intercept)**
@@ -211,18 +217,31 @@ knitr::include_graphics("docs/images/lm_errors.jpeg")
 
 ### Регрессионный анализ (тестирование коэффициентов регрессии)
 
+Регрессионный анализ принадлежит семейству Т-распределения, так же, как и корреляционный анализ. Число степеней свободы рассчитывает по формуле:
+
+<p align="center">$df = n - 2$, n -- число наблюдений </p>
+
 Нулевая и альтернативная гипотезы:
 
 <p align="center">$H_0$: $b_{1_{xy}} = 0$ </p>
 <p align="center">$H_1$: $b_{1_{xy}} \neq 0$ </p>
+
+Ключевой статистикой является Т-значение, оно вычисляется по формуле:
+
+<p align="center">$T = \frac{b_1}{se}$</p>
+
+Еще одно, если не самое важное значение для линейной регрессии -- это коэффициент детерминации. Мы уже сталкивались с ним, когда говорили про ANOVA и корреляцию:
+<p align="center">$R^2 = \frac{SSE}{SST} = 1 - \frac{SSR}{SST}$ </p>
+<p align="center"> $R^2 = r_{xy}^2 = \frac{\text{cov(x, y)}}{sd_x sd_y} = \frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{(n-1)sd_x sd_y}$</p>
 
 ### Допущения для регрессионного анализа
 
 (ЗП и НП измерены в количественной или порядковой шкале)
 
 1. Распределение НП по ЗП линейно -- то есть нет выборосов, нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
-2. Остатки (residuals) распределены нормально -- все то же самое, как [здесь](#param_nonparam), только для остатков
-3. Остатки (residuals) варьируются примерно одинаково вдоль всей прямой (гомоскедастичность)
+2. Остатки (residuals) распределены нормально -- все то же самое, как [здесь](#param_nonparam), только для остатков (график плотности вероятности или QQ-plot)
+3. Остатки (residuals) варьируются примерно одинаково вдоль всей прямой -- гомогенность (или гомоскедастичность, homoscedasticity) остатков. Проверяется тестом Левеня (Levene's Test of Homogeneity of Variance)
+
 https://gallery.shinyapps.io/slr_diag/
 
 ### Расчет регрессионного анализа
