--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -326,7 +326,7 @@ knitr::include_graphics("docs/images/errors.jpg")
 Как понять, какой тест выбрать? Это, наверное, один из самых сложных вопросов в статистике. На него влияет большое количество нюансов, мы рассмотрим их в [следующем разделе](#stats_criteria)
 
 
-## Размер выборки {#sample_size}
+## Размер выборки и размер эффекта {#sample_size}
 
 **Расчет размера выборки** -- важнейший этап, потому что именно он отвечает за нивелирование ошибки второго рода, сделать ложноотрицательный вывод. Вполне может оказаться так, что из-за маленькой выборки мы просто не смогли зафиксировать различия, которые на самом деле есть в генеральной совокупности! 
 
@@ -355,7 +355,7 @@ knitr::include_graphics("docs/images/errors.jpg")
 |   линейная регрессия (один фактор)  |     $Cohen' \ f$        |        0.1       |      0.25      |       0.4      |
 | линейная регрессия (много факторов) |  $partial \ \eta^2$     |       0.02       |      0.13      |      0.26      |
 | линейная регрессия (много факторов) |     $Cohen' \ f$        |       0.14       |      0.39      |      0.59      |
-
+| корреляционный тест                 |         $r_{xy}$        |       0.1        |      0.3       |      0.7       |
 
 "Calculating and reporting effect sizes to facilitate cumulative science: a practical primer for t-tests and ANOVAs" https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00863/full 
 
