--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -71,8 +71,7 @@ knitr::include_graphics("docs/images/correlation2.png")
 ```
 Пример с сайта https://rpsychologist.com/correlation/</p>
 
-https://rpsychologist.com/correlation/
-
+Игра по угадывание корреляции:
 http://guessthecorrelation.com/
 
 ### Корреляционный тест
@@ -209,6 +208,7 @@ knitr::include_graphics("docs/images/corrplot.png")
 
 Регрессионный анализ строится на построении регрессионной прямой: любая прямая имеет вид $y = kx + b$, в регрессионном анализе это уравнение часто записывается как $y = b_0 + b_1x$. И задача регрессионного анализа -- это определение и тестирование коэффициентов $b_0$ и $b_1$ регрессии.
 
+
 ### Коэффициенты регрессии
 
 Уравнение регрессионной прямой:
@@ -226,11 +226,27 @@ knitr::include_graphics("docs/images/anova_to_regression.png")
 * Коэффициент $b_0$ отвечает за смещение прямой вдоль оси y **(intercept)**
 * При подсчете коэффициентов первым высчитывается $b_1$, и он зависит от величины вариативности данных по переменным x и y (стандартных отклонений или дисперсий) и **в случае равной вариативности является коэффициентом корреляции** $r_{xy}$
 
+Коэффициенты считаются таким образом, чтобы сумма квадратов остатков была минимальна. Это называется **методом наименьших квадратов**.
+
+Остатки -- это отличия исходных данных от предсказанных нашей моделью, то, что "остается":
+<p align="center">$e = y - \hat y$</p>
+
+При построении регрессионной прямой нам надо стремиться к уменьшению этой суммы:
+<p align="center">$\sum_{i=1}^{n} e^2 = \sum_{i=1}^{n}(y - \hat y)^2$</p>
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="90%"}
+knitr::include_graphics("docs/images/lr.png")
+```
+</p>
+
+Формулы коэффициентов по методу наименьших квадратов:
+
 <p align="center">$b_{1_{xy}} = \frac{sd_y}{sd_x} r_{xy}$</p>
 
-<p align="center">$b_o = \bar y -b_{1_{xy}}\bar x$</p>
+<p align="center">$b_o = \bar y - b_{1_{xy}}\bar x$</p>
 
-Коэффициенты считаются таким образом, чтобы сумма квадратов остатков была минимальна. Это называется **методом наименьших квадратов**.
+
 
 ### Регрессионный анализ (тестирование коэффициентов регрессии)
 
@@ -251,6 +267,16 @@ knitr::include_graphics("docs/images/anova_to_regression.png")
 <p align="center">$R^2 = \frac{SSE}{SST} = 1 - \frac{SSR}{SST}$ </p>
 <p align="center"> $R^2 = r_{xy}^2 = \frac{\text{cov(x, y)}}{sd_x sd_y} = \frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{(n-1)sd_x sd_y}$</p>
 
+В линейной регрессии, так же, как и в ANOVA, коэффициент детерминации определяет уровень корреляции между исходными значениями переменной $y$ и предсказанными $\hat y$. По сути, он говорит о **проценте объясненной дисперсии**, то есть как хорошо наша регрессионная модель объясняет изменчивость зависимой переменной.
+
+Из формулировки видно, что эту величину можно рассматривать как размер эффекта -- и это ни что иное, как уже знакомая нам $\eta^2$
+
+<p align="center">$\eta^2 = \frac{SSE}{SST}$ </p>!
+
+<p align="center">$R^2 = \frac{SSE}{SST} = 1 - \frac{SSR}{SST}$ </p>
+
+**Множественный регрессионный анализ** -- подразумевает все то же самое, только появляются новые 
+
 ### Допущения для регрессионного анализа
 
 (ЗП и НП измерены в количественной или порядковой шкале)
@@ -258,12 +284,26 @@ knitr::include_graphics("docs/images/anova_to_regression.png")
 1. Распределение НП по ЗП линейно -- то есть нет выборосов, нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
 2. Остатки (residuals) распределены нормально -- все то же самое, как [здесь](#param_nonparam), только для остатков (график плотности вероятности или QQ-plot)
 3. Остатки (residuals) варьируются примерно одинаково вдоль всей прямой -- гомогенность (или гомоскедастичность, homoscedasticity) остатков. Проверяется тестом Левеня (Levene's Test of Homogeneity of Variance)
+4. Для множественной линейной регрессии -- отсутствие мультиколлинеарности (сильной корреляции между независимыми переменными)
 
 https://gallery.shinyapps.io/slr_diag/
 
 ### Расчет регрессионного анализа
 
 ```{r, eval=TRUE}
-model_Gmat <- lm(students$G_mat ~ students$absences_mat)
+students %>% 
+  ggplot(aes(x=G_por, y = G_mat)) +
+  geom_point(aes(colour = G_por)) +
+  geom_smooth(method="lm") +
+  scale_color_viridis() +
+  theme_minimal()
+```
+
+```{r, eval=TRUE}
+model_Gmat <- lm(students$G_mat ~ students$G_por)
 summary(model_Gmat)
+```
+```{r, eval=TRUE}
+model_Gmat2 <- lm(students$G_mat ~ students$G_por + students$G1_mat)
+summary(model_Gmat2)
 ```
